Wordpress/08-wp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-wordpress-service
  namespace: demo-wordpress
spec:
  selector:
    app: demo-wordpress
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: https
