Wordpress/10-wp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-wordpress-ingress-secure
  namespace: demo-wordpress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: chrissyroshak.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  demo-wordpress-service
                port:
                  number: 80
    - host: 'www.chrissyroshak.com'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  demo-wordpress-service
                port:
                  number: 80
    - host: 'marketing.chrissyroshak.com'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  demo-wordpress-service
                port:
                  number: 80
    - host: 'blog.chrissyroshak.com'
      http:
        paths:
          - path: "/marketing"
            pathType: Prefix
            backend:
              service:
                name:  demo-wordpress-service
                port:
                  number: 80
